# graduation-arena

./: .firebaserc  .gitignore  CLAUDE.md  firebase.json
.claude/: settings.json
.claude/hooks/: format_on_save.py
.claude/skills/dspace-harvest/: SKILL.md
.github/workflows/: .gitkeep  deploy-web.yml  format-check.yml  lint.yml  pipeline.yml  schemas.yml  test.yml
data/aggregates/: .gitkeep
data/fixtures/: .gitkeep  evaluator_stats.example.json  parsed_thesis.example.json
docs/: app-architecture.md  data-source.md  deploy.md  pipeline-handoff.md  scraping-approach.md
local/: .gitignore
pipeline/: README.md  pyproject.toml
pipeline/src/ga_pipeline/: __init__.py  cli.py  oai.py  parser.py  store.py
pipeline/tests/: test_cli.py  test_oai.py
schemas/: README.md  export.py  models.py  pyproject.toml
schemas/ga_schemas/: __init__.py  export.py  models.py
schemas/json/: evaluator_stats.schema.json  parsed_thesis.schema.json  raw_thesis.schema.json
schemas/ts/: index.ts  types.ts
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/lib/components/: Avatar.svelte  EvaluatorResult.svelte  GradeDistributionBar.svelte
web/src/lib/data/: evaluators.spec.ts  evaluators.ts
web/src/routes/: +page.svelte  +page.ts
web/src/routes/evaluators/: +page.svelte  +page.ts
web/static/data/: evaluator-stats.json
