[project]
name = "ga-pipeline"
version = "0.0.0"
description = "Data pipeline for graduation-arena: scrape, parse, aggregate, and build static JSON."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
ga-pipeline = "ga_pipeline.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ga_pipeline"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A sensible default set: pyflakes (F), pycodestyle (E/W), isort (I),
# pyupgrade (UP), flake8-bugbear (B), and naming (N).
select = ["E", "W", "F", "I", "UP", "B", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
